--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="thirdPage">
         <h4 id="about">About Us</h4>
         <div class="aboutUs">
-         <img src="/Landing Page/pics/Untitled.png" alt="">
+         <img src="pics/Untitled.png" alt="">
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil provident nulla vero est amet rerum, reprehenderit ipsum perferendis molestias! Eius labore sit magnam similique omnis impedit? Similique ab tempora quis sapiente, vero quibusdam voluptas voluptatem itaque officiis quia saepe, ducimus quae aut minima, porro magnam reprehenderit repellendus? Quisquam a qui commodi, et iure voluptatem accusamus rem amet suscipit at aut quo laudantium eveniet minima ratione porro. Obcaecati, corporis! Adipisci saepe illum corporis voluptates. Assumenda totam dicta atque autem corrupti, officia, cupiditate nesciunt adipisci, quaerat ipsum blanditiis! Atque architecto, neque sed omnis quia, sequi qui minus labore, error aperiam officia eaque exercitationem impedit ab. Sapiente fugiat temporibus molestias quo praesentium, provident, velit hic libero exercitationem quasi odit neque harum corporis pariatur, blanditiis doloremque magnam dolores architecto est assumenda sint impedit. Deleniti perferendis quisquam, laborum ratione nam aperiam nobis repellat.</p>
         </div>
     </div>
